langtools/test/tools/javac/generics/inference/6650759/T6650759m.out
T6650759m.java:43:36: compiler.err.prob.found.req: (compiler.misc.inferred.do.not.conform.to.upper.bounds: java.lang.String, java.lang.Integer,java.lang.Object)
1 error
